syntax = "proto3";

package pb;

import "user.proto";

option go_package = "github.com/blueai2022/appsubmission/pb";

message GetUserRequest {
    string username = 1;
}

message GetUserResponse {
    User user = 1;
}